--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+3
+version: 1.0.3+4
 
 environment:
   sdk: ">=2.19.3 <3.0.0"
@@ -45,6 +45,7 @@ dependencies:
   fluttertoast: ^8.2.2
   firebase_core: ^2.16.0
   firebase_analytics: ^10.5.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
