--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.3+4
+version: 1.0.4+5
 
 environment:
   sdk: ">=2.19.3 <3.0.0"
@@ -34,18 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.6.5
+  get: ^4.6.6
   volume_controller: ^2.0.6
   numberpicker: ^2.1.2
-  circular_countdown_timer: ^0.2.3
+  circular_countdown_timer: ^0.2.4
   audioplayers: ^0.20.1
-  applovin_max: ^2.4.4
-  bottom_navy_bar: ^6.0.0
-  share_plus: ^7.0.2
-  fluttertoast: ^8.2.2
-  firebase_core: ^2.16.0
-  firebase_analytics: ^10.5.0
-  shared_preferences: ^2.0.15
+  applovin_max: ^4.2.1
+  bottom_navy_bar: ^6.1.0
+  share_plus: ^10.1.4
+  fluttertoast: ^8.2.10
+  firebase_core: ^3.10.1
+  firebase_analytics: ^11.4.1
+  shared_preferences: ^2.4.0
+  in_app_review: ^2.0.9
 
 dev_dependencies:
   flutter_test:
